tests/ui/macros/meta-variable-depth-outside-repeat.stderr
error: meta-variable expression `length` with depth parameter must be called inside of a macro repetition
  --> $DIR/meta-variable-depth-outside-repeat.rs:5:10
   |
LL |         ${length(0)}
   |          ^^^^^^^^^^^
...
LL | const _: i32 = metavar!(0);
   |                ----------- in this macro invocation
   |
   = note: this error originates in the macro `metavar` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

